--- a/XclusionZone-2023/WebGL Builds/IAA_Demo_2/index.html
+++ b/XclusionZone-2023/WebGL Builds/IAA_Demo_2/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Builds.loader.js";
+      var loaderUrl = buildUrl + "/IAA_Demo_2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Builds.data.gz",
-        frameworkUrl: buildUrl + "/WebGL Builds.framework.js.gz",
-        codeUrl: buildUrl + "/WebGL Builds.wasm.gz",
+        dataUrl: buildUrl + "/IAA_Demo_2.data.gz",
+        frameworkUrl: buildUrl + "/IAA_Demo_2.framework.js.gz",
+        codeUrl: buildUrl + "/IAA_Demo_2.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "XclusionZone-2023",
@@ -69,7 +69,7 @@
         showBanner: unityShowBanner,
       };
 
-      // By default Unity keeps WebGL canvas render target size matched with
+      // By default, Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
       // happening inside the engine, and you would instead like to size up
